<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/diaryly_logo"
        android:scaleType="center"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:src="@drawable/ic_logo_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/google_sans_medium"
        android:text="@string/login_to_diaryly"
        android:textColor="@android:color/black"
        android:textSize="@dimen/headline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView" />

    <LinearLayout
        android:id="@+id/textContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerTextView">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subtitleTextView"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:firstBaselineToTopHeight="@dimen/margin_large_24"
            android:text="@string/haven_t_sign_up_yet" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="@dimen/margin_small_8"
            android:paddingEnd="@dimen/margin_small_8"
            android:text="@string/sign_up_here"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:firstBaselineToTopHeight="@dimen/margin_large_24"
            app:textAllCaps="false" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/emailLoginBtn"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="@dimen/margin_large_24"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/google_sans_medium"
        android:text="@string/log_in_with_email"
        android:textColor="@color/blackAlpha60"
        app:icon="@drawable/ic_email_black_24dp"
        app:iconTint="@color/blackAlpha60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textContainer" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/googleLoginBtn"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="@dimen/margin_med_16"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/google_sans_medium"
        android:text="@string/log_in_with_google"
        android:visibility="gone"
        app:icon="@drawable/logo_google_color"
        app:iconTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLoginBtn"
        app:layout_constraintVertical_bias="0.3"
        app:rippleColor="@color/mainBlue" />
</androidx.constraintlayout.widget.ConstraintLayout>
