<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/header"
        layout="@layout/header_login_register" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Body2"
        app:firstBaselineToTopHeight="@dimen/margin_xlarge_48"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="tanawin20@gmail.com"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large_24"
        android:layout_marginTop="@dimen/margin_med_16"
        android:hint="@string/password"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:helperText="@string/hint_password_register"
        app:helperTextEnabled="true"
        app:hintTextColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userEmailText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large_24"
        android:layout_marginTop="@dimen/margin_med_16"
        android:hint="@string/hint_password_enter_again"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:errorEnabled="true"
        app:helperText="@string/hint_password_repeat_register"
        app:helperTextEnabled="true"
        app:hintTextColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextField1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <include layout="@layout/buttons_login_register" />

</androidx.constraintlayout.widget.ConstraintLayout>